--- a/spinwheelapp/templates/spin.html
+++ b/spinwheelapp/templates/spin.html
@@ -12,6 +12,26 @@
             --shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
         }
 
+        /* body {
+            font-family: 'Poppins', sans-serif;
+            text-align: center;
+            padding: 0;
+            margin: 0;
+            background: #f9f9f9;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            background-color: #ffffff;
+            background-image: url("https://www.transparenttextures.com/patterns/cartographer.png");
+            background-repeat: repeat;
+            color: #333;
+            height: 100%;
+            width: 100%;
+            overflow-x: hidden;
+        } */
+
         body {
             font-family: 'Poppins', sans-serif;
             text-align: center;
@@ -23,8 +43,9 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            background-color: #f0d6df;
-            background-image: url("https://www.transparenttextures.com/patterns/cartographer.png");
+            background-color: #f7dfdf;
+            
+
             background-repeat: repeat;
             color: #333;
             height: 100%;
